Your commit message here

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,36 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+}
+
+.appHeader {
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+.soppingCartIcon {
+  font-size: 30px;
+  margin-right: 16px;
+  cursor: pointer;
+}
+
+
+
+.pageContent {
+  display: flex;
+  flex: 1;
+  overflow-y: auto;
+}
+
+.appFooter {
+  height: 60px;
+  background-color: black;
 }
 
 .App-logo {
@@ -32,7 +63,18 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.itemCardImage {
+  height: 150px !important;
+  object-fit: scale-down;
+}
+
+.itemCard,
+.badgeName {
+  margin: 8px;
 }
